[package]
name = "small"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
web-sys = {version = "0.3.72", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window','Navigator','XrSystem','XrSessionMode']}

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "thin"

