[package]
name = "wasm-webxr-test"
version = "0.1.0"
edition = "2021"

[dependencies]
color-spantrace = "0.2.1"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = {version = "0.3.72", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window','Navigator','XrSystem','XrSessionMode']}

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "thin"

